--- a/src/Aardvark.OpenCV.Tests/Aardvark.OpenCV.Tests.fsproj
+++ b/src/Aardvark.OpenCV.Tests/Aardvark.OpenCV.Tests.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug</OutputPath>
@@ -10,6 +11,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release</OutputPath>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="Benchmarks\ImageBench.fs" />
+    <Compile Include="Tests\ClusteringTests.fs" />
+    <Compile Include="Tests\FittingTests.fs" />
+    <Compile Include="Tests\ImageTests.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="paket.references" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.OpenCV\Aardvark.OpenCV.csproj" />
   </ItemGroup>
